--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,1 +1,35 @@
-<p>p p</p>
+<div id="form-holder" class="m-5 p-5 d-flex justify-content-around align-items-center">
+
+  <div id="login">
+    <h2>Login</h2>
+    <form>
+      <div class="form-group">
+        <label for="exampleInputEmail1">Username</label>
+        <input type="username" class="form-control" id="username-login" aria-describedby="emailHelp">
+        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+      </div>
+      <div class="form-group">
+        <label for="exampleInputPassword1">Password</label>
+        <input type="password" class="form-control" id="username-password">
+      </div>
+      <button id="login-btn" type="submit" class="btn btn-primary">Login!</button>
+    </form>
+  </div>
+
+  <div id="signup" class="">
+    <h2>Create your account</h2>
+    <form>
+      <div class="form-group">
+        <label for="signup-username">Username</label>
+        <input type="email" class="form-control" id="signup-username" aria-describedby="emailHelp">
+        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+      </div>
+      <div class="form-group">
+        <label for="signup-password">Password</label>
+        <input type="password" class="form-control" id="signup-password">
+      </div>
+      <button id="signup-btn" type="submit" class="btn btn-primary">Sign Up!</button>
+    </form>
+  </div>
+
+</div>
