added to code to public js

--- a/views/layouts/feed.handlebars
+++ b/views/layouts/feed.handlebars
@@ -25,6 +25,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/feed">Timeline</a>
         </li>
+        <li class="nav-item">
+          <a id="logout-link" class="nav-link" href="#">Logout</a>
+        </li>
       </ul>
     </div>
   </nav>
