--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,7 +2,7 @@
 
   <div id="login">
     <h2>Login</h2>
-    <form>
+    <form id="login-form">
       <div class="form-group">
         <label for="exampleInputEmail1">Username</label>
         <input type="username" class="form-control" id="username-login" aria-describedby="emailHelp">
@@ -16,7 +16,7 @@
     </form>
   </div>
 
-  <div id="signup" class="">
+  <div id="signup-form" class="">
     <h2>Create your account</h2>
     <form>
       <div class="form-group">
