--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,25 +4,23 @@
     <h2>Login</h2>
     <form id="login-form">
       <div class="form-group">
-        <label for="exampleInputEmail1">Username</label>
-        <input type="username" class="form-control" id="username-login" aria-describedby="emailHelp">
-        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        <label for="login-username">Username</label>
+        <input type="username" class="form-control" id="username-login">
       </div>
       <div class="form-group">
-        <label for="exampleInputPassword1">Password</label>
+        <label for="login-password">Password</label>
         <input type="password" class="form-control" id="username-password">
       </div>
       <button id="login-btn" type="submit" class="btn btn-primary">Login!</button>
     </form>
   </div>
 
-  <div id="signup-form" class="">
+  <div id="signup">
     <h2>Create your account</h2>
-    <form>
+    <form id="signup-form">
       <div class="form-group">
         <label for="signup-username">Username</label>
-        <input type="email" class="form-control" id="signup-username" aria-describedby="emailHelp">
-        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        <input type="username" class="form-control" id="signup-username">
       </div>
       <div class="form-group">
         <label for="signup-password">Password</label>
