--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -16,9 +16,9 @@
     </form>
   </div>
 
-  <div id="signup-form" class="">
+  <div id="signup" class="">
     <h2>Create your account</h2>
-    <form>
+    <form id="signup-form">
       <div class="form-group">
         <label for="signup-username">Username</label>
         <input type="email" class="form-control" id="signup-username" aria-describedby="emailHelp">
