--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,11 +4,11 @@
     <h2>Login</h2>
     <form id="login-form">
       <div class="form-group">
-        <label for="login-username">Username</label>
+        <label for="username-login">Username</label>
         <input type="username" class="form-control" id="username-login">
       </div>
       <div class="form-group">
-        <label for="login-password">Password</label>
+        <label for="username-password">Password</label>
         <input type="password" class="form-control" id="username-password">
       </div>
       <button id="login-btn" type="submit" class="btn btn-primary">Login!</button>
@@ -33,3 +33,5 @@
   </div>
 
 </div>
+
+<script src="/js/login.js"></script>
