--- a/views/user-shoes.handlebars
+++ b/views/user-shoes.handlebars
@@ -31,18 +31,18 @@
   <div class="card m-5 text-center" style="width: 25rem;">
     <img src="uploaded image here" class="card-img-top" alt="panda">
     <div class="card-body">
-      <h5 class="card-title">`${shoes.name}`</h5>
+      <h5 class="card-title">{{shoes.name}}</h5>
     </div>
     <ul class="list-group list-group-flush">
-      <li class="list-group-item">`${shoes.brand}</li>
-      <li class="list-group-item">`${shoes.style}</li>
+      <li class="list-group-item">{{shoes.brand}}</li>
+      <li class="list-group-item">{{shoes.style}}</li>
     </ul>
     <div class="card-body">
-      <a href="#" class="card-link">Edit</a>
-      <a href="#" class="card-link">Delete</a>
+      <a id="edit-btn" href="/edit/{{id}}" class="card-link">Edit</a>
     </div>
   </div>
   {{/each}}
 
 </div>
 
+{{!-- <script src="/js/newshoes.js"></script> --}}
