--- a/views/user-shoes.handlebars
+++ b/views/user-shoes.handlebars
@@ -27,15 +27,15 @@
 </div>
 
 <div id="collection" class="flex-wrap d-flex">
-  {{#each User.shoes}}
+  {{#each shoes}}
   <div class="card m-5 text-center" style="width: 25rem;">
     <img src="uploaded image here" class="card-img-top" alt="panda">
     <div class="card-body">
-      <h5 class="card-title">{{shoes.name}}</h5>
+      <h5 class="card-title">{{name}}</h5>
     </div>
     <ul class="list-group list-group-flush">
-      <li class="list-group-item">{{shoes.brand}}</li>
-      <li class="list-group-item">{{shoes.style}}</li>
+      <li class="list-group-item">{{brand}}</li>
+      <li class="list-group-item">{{style}}</li>
     </ul>
     <div class="card-body">
       <a id="edit-btn" href="/edit/{{id}}" class="card-link">Edit</a>
