--- a/views/all-shoes.handlebars
+++ b/views/all-shoes.handlebars
@@ -2,7 +2,10 @@
   <h2>Your Feed</h2>
 </div>
 
-<div class="d-block justify-content-center">
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-lg-8">
+      
   {{#each shoes}}
   <div class="card m-5 text-center" style="width: 25rem;">
     <h5>Posted by {{shoes.User.username}} on {{format_date post.createAt}}</h5>
@@ -17,6 +20,7 @@
   </div>
   {{/each}}
 
-
+    </div>
+  </div>
 </div>
 
