--- a/views/layouts/feed.handlebars
+++ b/views/layouts/feed.handlebars
@@ -20,10 +20,10 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/home">Home </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/feed">Timeline</a>
+          <a class="nav-link" href="/feed">Timeline<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a id="logout-link" class="nav-link" href="#">Logout</a>
