--- a/views/user-shoes.handlebars
+++ b/views/user-shoes.handlebars
@@ -1,30 +1,7 @@
 <div class="p-3">
   <h2>Your Collection</h2>
-  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#staticBackdrop">
-    Post New Shoes
-  </button>
-
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Post New Shoes</h5>
-          <button type="button" data-toggle="modal" data-target="#myModal" class="close" data-dismiss="modal"
-            aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <!-- add form here -->
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+  <a href="/home/post" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Post New Shoe</a>
+</div>  
 
 <div id="collection" class="flex-wrap d-flex">
   {{#each shoes}}
@@ -45,4 +22,4 @@
 
 </div>
 
-{{!-- <script src="/js/newshoes.js"></script> --}}
+
