--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -2,7 +2,7 @@
   <h2>Edit</h2>
 </div>
 <div>
-  <form id="name-edit">
+  <form id="name-edit" data-id="{{id}}">
     <div class="form-group">
       <input type="hidden" name="shoe-id" value="{{Shoe.id}}" />
 
@@ -22,4 +22,4 @@
   <div>
 <div>
   
-{{!--<script src="/js/edit.js"></script> --}}
+<script src="/js/edit.js"></script>
