--- a/views/user-shoes.handlebars
+++ b/views/user-shoes.handlebars
@@ -15,7 +15,7 @@
       <li class="list-group-item">{{style}}</li>
     </ul>
     <div class="card-body">
-      <a id="edit-btn" href="/edit/{{id}}" class="card-link">Edit</a>
+      <a id="edit-btn" href="/home/edit/{{id}}" class="card-link">Edit</a>
     </div>
   </div>
   {{/each}}
