--- a/views/all-shoes.handlebars
+++ b/views/all-shoes.handlebars
@@ -8,14 +8,14 @@
       
   {{#each shoes}}
   <div class="card m-5 text-center" style="width: 25rem;">
-    <h5>Posted by {{shoes.User.username}} on {{format_date shoes.createAt}}</h5>
-    <img src="https://i.ebayimg.com/images/g/a9oAAOSwAdljfaD5/s-l1600.jpg" class="card-img-top" alt="panda">
+    <h5>Posted by {{user.username}}</h5>
+    <img src="{{image}}" class="card-img-top" alt="panda">
     <div class="card-body">
-      <h5 class="card-title">{{shoes.name}}</h5>
+      <h5 class="card-title">{{name}}</h5>
     </div>
     <ul class="list-group list-group-flush">
-      <li class="list-group-item">{{shoes.brand}}</li>
-      <li class="list-group-item">{{shoes.style}}</li>
+      <li class="list-group-item">{{brand}}</li>
+      <li class="list-group-item">{{style}}</li>
     </ul>
   </div>
   {{/each}}
