--- a/views/all-shoes.handlebars
+++ b/views/all-shoes.handlebars
@@ -11,11 +11,11 @@
     <h5>Posted by {{user.username}}</h5>
     <img src="{{image}}" class="card-img-top" alt="panda">
     <div class="card-body">
-      <h5 class="card-title">{{name}}</h5>
+      <h5 class="card-title">Name: {{name}}</h5>
     </div>
     <ul class="list-group list-group-flush">
-      <li class="list-group-item">{{brand}}</li>
-      <li class="list-group-item">{{style}}</li>
+      <li class="list-group-item">Brand: {{brand}}</li>
+      <li class="list-group-item">Style: {{style}}</li>
     </ul>
   </div>
   {{/each}}
