--- a/views/new-shoe.handlebars
+++ b/views/new-shoe.handlebars
@@ -1,6 +1,10 @@
 <div class="p-3">
   <h2>Post Shoe</h2>
 </div>
+<div class="card card-form mx-5">
+  <div class="row justify-content-center">
+    <div class="col-lg-8">
+
 <form id="new-shoe">
   <div class="form-group m-3">
 
@@ -17,9 +21,14 @@
       <input id="upload" name="upload" type="file" onchange="onFileSelected(event)">
     </div> 
     <br>
-    <button type="submit" class="btn btn-primary active" role="button" aria-pressed="true">Post
+    <button type="submit" class="btn active" role="button" aria-pressed="true">Post
       Shoe</button>
 
 </form>
+
+    </div>
+    </div>
+    </div>
+
 
 <script src="/js/newshoe.js"></script>
