--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,12 +1,40 @@
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+.card {
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  box-shadow: 5px 5px 10px black;
 }
+
+body {
+  margin: 0px;
+  padding: 0px;
+  background: #134E5E;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to bottom, #71B280, #134E5E);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to bottom, #71B280, #134E5E); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background-repeat: no-repeat;
+  min-height: 100vh;
+}
+
+.btn {
+  background-color: #134E5E;
+  color:  white; 
+}
+
+.navbar-custom {
+  background-color:white;
+}
+
+.card-form {
+background-color: #68A87D;
+}
+
+.list-group {
+background-color: #68A87D;
+}
+
+#edit-btn {
+  font-size: 20px;
+}
+
